--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 <button onclick="goToChapter(7)" class="chapter-btn">7</button>
 </div>
 
-<canvas id="pdfCanvas"></canvas>
+<div id="canvasWrapper">
+  <canvas id="pdfCanvas"></canvas>
+</div>
 
 <div class="controls">
 <button id="prevPage" class="page-btn">Назад</button>
