--- a/index.html
+++ b/index.html
@@ -3,48 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KROSS — читалка</title>
+    <title>KROSS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="theme-beige">
     <div class="app">
-        <!-- Шапка с заголовком и кнопкой темы -->
-        <header class="book-header">
+        <div class="header">
             <div class="header-top">
                 <h1>KROSS</h1>
-                <button class="theme-toggle" id="themeToggle" aria-label="Сменить тему">🌙</button>
+                <button class="theme-btn" id="themeBtn">🌙</button>
             </div>
             <div class="subtitle">часть 1</div>
-
-            <!-- Блок автора и описания (можно свернуть) -->
-            <div class="author-info" id="authorInfo">
+            <div class="author-block" id="authorBlock">
                 <div class="author">Автор: Катя Ким</div>
-                <div class="description">
+                <div class="desc" id="desc">
                     На крупнейшем танцевальном российском чемпионате происходит трагедия, при которой один из участников известной провинциальной команды погибает прямо на сцене во время выступления от рук своих товарищей. Лидер коллектива, двадцатилетний Никита Аннинский, восстанавливает череду событий, предшествующих убийству.
                 </div>
-                <button class="toggle-description" id="toggleDesc" aria-label="Свернуть описание">▲</button>
+                <button class="toggle-desc" id="toggleDesc">▲</button>
             </div>
-
-            <!-- Кнопки глав (всегда видны) -->
-            <div class="chapter-nav">
-                <button class="chapter-btn" data-chapter="0">1</button>
-                <button class="chapter-btn" data-chapter="1">2</button>
-                <button class="chapter-btn" data-chapter="2">3</button>
-                <button class="chapter-btn" data-chapter="3">4</button>
-                <button class="chapter-btn" data-chapter="4">5</button>
-                <button class="chapter-btn" data-chapter="5">6</button>
-                <button class="chapter-btn" data-chapter="6">7</button>
+            <div class="chapters">
+                <button class="chap" data-chap="0">1</button>
+                <button class="chap" data-chap="1">2</button>
+                <button class="chap" data-chap="2">3</button>
+                <button class="chap" data-chap="3">4</button>
+                <button class="chap" data-chap="4">5</button>
+                <button class="chap" data-chap="5">6</button>
+                <button class="chap" data-chap="6">7</button>
             </div>
-        </header>
-
-        <!-- Контейнер для страниц (вертикальный свайп) -->
-        <div class="pages-container" id="pagesContainer">
-            <!-- Страницы будут добавляться динамически -->
         </div>
 
-        <!-- Индикатор страниц и подсказка -->
-        <div class="page-indicator" id="pageIndicator">1 / 130</div>
-        <div class="hint" id="hint">Листай вверх!</div>
+        <div class="reader" id="reader">
+            <!-- сюда будет вставлена текущая страница -->
+        </div>
+
+        <div class="footer">
+            <div class="page-num" id="pageNum">1 / 130</div>
+            <div class="hint" id="hint">Листай вверх!</div>
+        </div>
     </div>
     <script src="chapters.js"></script>
     <script src="script.js"></script>
